EQ6-98 ajustement des statuts de réponse et des tests pour la gestion des CV étudiants, adaptation des paramètres d'API et des assertions de contenu